# Repak-X

./: .gitignore  .gitmodules  BACKEND_COMPLETE.md  BUILD_AND_TEST.bat  CHANGELOG.md  CRASH_DETECTION_UI_IMPLEMENTATION.md  Cargo.toml  DOCUMENTATION.md  FOLDER_REFRESH_FIX.md  LOCAL_P2P_TEST_GUIDE.md  MIGRATION_REPAK_TO_UASSETTOOL.md  MOD_DETAILS_ERROR_BUG.md  MOD_DETECTION_API.md  P2P_FILE_TRANSFER_STATUS.md  P2P_IMPLEMENTATION_COMPLETE.md  P2P_STATUS_AND_PLAN.md  QUICK_TEST.md  README.md  RUN_TWO_INSTANCES.bat  START_RECEIVER.bat  START_SENDER.bat  TEST_P2P_LOCALLY.bat  build_and_package.ps1  build_app.ps1  build_contributor.ps1  package_release.bat  package_release.ps1  push_backend.ps1  push_frontend.ps1  run_app.ps1
repak-gui/: .taurignore  Cargo.toml  FRONTEND_CHANGES_NEEDED.md  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
repak-gui/capabilities/: default.json
repak-gui/docs/: BACKEND_API.md  BLUEPRINT_STRING-TABLE_UI_IMPLEMENTATION.md  BUNDLED_LOD_MOD_JSX_CHANGES.md  EXTRACT_ASSETS_JSX_CHANGES.md  FOLDER_HIERARCHY_UX_GUIDE.md  FOLDER_REFRESH_FIX.md  FRONTEND_IMPLEMENTATION_UNGROUPED_FIX.md  GAME_DETECTION_IMPROVEMENTS.md  LAUNCH_GAME_PROPOSAL.md  Legacy_Pak_Toggle_proposal.md  MOD_DETAILS_RACE_CONDITION_FIX.md  MOD_DETECTION_API.md  NESTED_FOLDER_IMPLEMENTATION.md  P2P_INTERNET_WIDE.md  P2P_QUICKSTART.md  P2P_SECURITY.md  P2P_SHARING_UX_GUIDE.md  P2P_TODO.md  SECURITY_SUMMARY.md  SUBFOLDER_SUPPORT_PROPOSAL.md  TECHNICAL_DOCUMENTATION.md  UI_CHANGELOG.md  UX_DESIGNER_GUIDE_P2P.md  protocol-handler-proposal.md
repak-gui/scripts/: color-mapper.ps1  mappings.json  new_skins.json
repak-gui/src/: App.css  App.jsx  App_backup.css  App_backup.jsx  app_state.rs  character_data.rs  crash_monitor.rs  discord_presence.rs  install_mod.rs  ios_widget.rs  main.jsx  main.rs  main_tauri.rs  p2p_libp2p.rs  p2p_manager.rs  p2p_protocol.rs  p2p_relay.rs  p2p_security.rs  p2p_sharing.rs  p2p_stream.rs  toast_events.rs  uasset_api_integration.rs  uasset_detection.rs  utils.rs  utoc_utils.rs
repak-gui/src/bundled_mods/: README.md
repak-gui/src/components/: ALERTS.md  AddModSplitButton.jsx  AlertHandler.jsx  ClashPanel.css  ClashPanel.jsx  ContextMenu.css  ContextMenu.jsx  CreditsPanel.css  CreditsPanel.jsx  DropZoneOverlay.css  DropZoneOverlay.jsx  FileTree.css  FolderTree.css  FolderTree.jsx  HeroFilterDropdown.css  HeroFilterDropdown.jsx  InstallModPanel.css  InstallModPanel.jsx  LogDrawer.css  LogDrawer.jsx  ModDetailsPanel.css  ModDetailsPanel.jsx  ModInstallDialog.jsx  ModsList.css  ModsList.jsx  OnboardingTour.css  OnboardingTour.jsx  SettingsPanel.css  SettingsPanel.jsx  SharingPanel.css  SharingPanel.jsx  ShortcutsHelpModal.css  ShortcutsHelpModal.jsx  TitleBar.css  TitleBar.jsx  ToolsPanel.jsx
repak-x/: build.rs  (+6 more)
uasset_toolkit/: Cargo.toml  README.md
uasset_toolkit/uasset_app/: Cargo.toml  build.rs
(+168 files in other folders)
