[package]
name = "repak-gui"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

[[bin]]
name = "repak-gui"
path = "src/main_tauri.rs"

[package.metadata.wix]
upgrade-guid = "3ABC116E-0858-4842-8C33-F213D7FA8A4B"
path-guid = "0F727DCE-5DD6-48B8-9882-F9205826FCC0"
license = false
eula = false

[dependencies]
# GUI Framework - Tauri (converted from egui)
# egui version backed up in src/egui_backup_original/
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"

# Logging
log = "0.4.26"
simplelog = "0.12.2"

# Core dependencies
repak = { path = "../repak" ,features = ["oodle", "encryption"] }
hex.workspace = true
sha2 = "0.10.9"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0.139"
dirs = "6.0.0"
tempfile = "3.17.1"
path-clean = "1.0.1"
path-slash = "0.2.1"
rayon = "1.10.0"

# UAsset handling
uasset-mesh-patch-rivals = {path = "../uasset-mesh-patch-rivals"}
uasset_toolkit = { path = "../uasset_toolkit/uasset_app", package = "uasset_app" }

# Utilities
colored = "3.0.0"
notify = "8.0.0"
regex-lite = "0.1.5"
retoc = {path = "../retoc-rivals"}
unrar = "0.5.8"
zip = "2.6.1"
walkdir = "2.5.0"

# Update checking
reqwest = { version = "0.12.8", features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.23"
open = "5.3.0"

# Process checking
sysinfo = "0.32"

# Async runtime
tokio = { version = "1", features = ["full"] }

[build-dependencies]
winres = "0.1.12"
tauri-build = { version = "2.0", features = [] }
