[workspace]
resolver = "2"
members = ["uasset_app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Xzant"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
