[package]
name = "uasset_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "uasset_toolkit"
path = "src/lib.rs"

[[bin]]
name = "uasset_app"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true

[build-dependencies]
